# test_mesh_lite

./: README.md
test_mesh_lite/: CMakeLists.txt  sdkconfig  sdkconfig.old
test_mesh_lite/main/: CMakeLists.txt  idf_component.yml  main.cpp  main.hpp
